# celus-nibbler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitlab/: build-and-release.yml  pre-commit.yml  run-tests.yml
celus_nibbler/: __init__.py  __main__.py  aggregator.py  conditions.py  coordinates.py  data_headers.py  definitions.py  eat_and_poop.py  errors.py  findparser_and_parse.py  logging_config.py  reader.py  record.py  settings.py  sources.py  utils.py  validators.py  warnings.py
celus_nibbler/definitions/: __init__.py  base.py  celus_format.py  common.py  counter.py  date_based.py  date_metric_based.py  dummy.py  fixed.py  generic.py  metric_based.py
celus_nibbler/parsers/: __init__.py  base.py  counter4.py  dynamic.py  format_1.py  format_1_parsers.py  generalparser.py
celus_nibbler/parsers/counter/: __init__.py  c4.py  c5.py  c51.py  c51json.py  c5json.py
celus_nibbler/parsers/non_counter/: base.py  celus_format.py  date_based.py  date_metric_based.py  generic.py  metric_based.py
celus_nibbler/report/: __init__.py  base.py  csv.py
convertors/: ACS.tsv  Anne.xlsx  Brepolis_Latin.xls  Brepolis_Medieval.xls  beckonline.xlsx  convertor.py  openpyxl_convertor.py  pandas_convertor.py
documentation/: Documentation.md
src/celus_nibbler/: __init__.py  __main__.py  aggregator.py  conditions.py  coordinates.py  data_headers.py  errors.py  sources.py  validators.py
src/celus_nibbler/definitions/: base.py  celus_format.py  counter.py  generic.py
src/celus_nibbler/parsers/: base.py
src/celus_nibbler/parsers/counter/: c4.py  c5.py  c51.py  c51json.py  c5json.py
src/celus_nibbler/parsers/non_counter/: base.py
tests/: conftest.py  test_conditions.py  test_coordinates.py  test_counter4.py  test_counter5.py  test_counter51.py  test_csv.py  test_definitions.py  test_dynamic.py  test_eat.py  test_example.py  test_functions.py  test_noncounter.py  test_poop.py  test_reader.py  testing_data.py
tests/data/counter/4/: BR1-a.tsv  BR1-a.tsv.out  BR1-b.tsv  BR1-b.tsv.out  BR1-empty1.tsv  BR1-empty2.tsv  BR1-empty_values.csv  BR1-empty_values.csv.out  BR2-a.tsv  BR2-a.tsv.out  BR2-b.tsv  BR2-b.tsv.out  BR3-a.tsv  BR3-a.tsv.out  BR3-b.tsv  BR3-b.tsv.out  DB1-a.tsv  DB1-a.tsv.out  DB1-b.tsv  DB1-b.tsv.out  DB2-a.tsv  DB2-a.tsv.out  DB2-b.tsv  DB2-b.tsv.out  JR1-a.tsv  JR1-a.tsv.out  JR1-b.tsv  JR1-b.tsv.out  JR1-d.csv  JR1-d.csv.out  JR1GOA-a.tsv  JR1GOA-a.tsv.out  JR1GOA-b.tsv  JR1GOA-b.tsv.out  JR1a-a.tsv  JR1a-a.tsv.out  JR1a-b.tsv  JR1a-b.tsv.out  JR2-a.tsv  JR2-a.tsv.out  (+11 more)
tests/data/counter/5/: DR-a.tsv  DR-a.tsv.out  DR-b.tsv  DR-c.json  DR-c.json.out  DR-d.json  DR-d.json.out  DR-e.csv  DR-e.csv.out  DR-empty.json  DR-empty.tsv  DR-f.tsv  DR-f.tsv.out  DR-sample.json.out  DR-sample.tsv.out  IR-empty.json  IR-empty.tsv  IR-sample.json.out  IR-sample.tsv  IR-sample.tsv.out  IR_M1-a.csv  IR_M1-a.csv.out  IR_M1-b.csv  IR_M1-b.csv.out  IR_M1-c.json  IR_M1-c.json.out  IR_M1-d.json  IR_M1-d.json.out  IR_M1-empty.json  IR_M1-empty.tsv  IR_M1-f.tsv  IR_M1-f.tsv.out  IR_M1-sample.tsv.out  PR-a.tsv  PR-a.tsv.out  PR-b.tsv  PR-b.tsv.out  PR-c.json  PR-c.json.out  PR-d.json  (+30 more)
tests/data/counter/51/: DR_empty_r51.json  DR_empty_r51.tsv  DR_sample_r51.json.out  DR_sample_r51.tsv.out  IRM1_empty_r51.json  IRM1_empty_r51.tsv  IRM1_sample_r51.json.out  IRM1_sample_r51.tsv.out  IR_empty_r51.json  IR_empty_r51.tsv  IR_sample_r51.json.out  IR_sample_r51.tsv.out  PR_empty_r51.json  PR_empty_r51.tsv  PR_sample_r51.json.out  PR_sample_r51.tsv.out  TR_empty_r51.json  TR_empty_r51.tsv  TR_sample_r51.json.out  TR_sample_r51.tsv.out
tests/data/csv/: ex-title-metric-publisher-success.csv
tests/data/dynamic/: aliases.csv  aliases.csv.out  aliases.json  aliases2.csv.out  aliases2.json  available-metrics-stop.csv.out  available-metrics-stop.json  available-metrics.csv.out  available-metrics.json  available-metrics2-stop.csv.out  available-metrics2-stop.json  available-metrics2.csv  available-metrics2.csv.out  available-metrics2.json  blank.csv  blank.json  complex_header_parsing.csv  complex_header_parsing.csv.out  complex_header_parsing.json  complex_header_parsing2.csv  complex_header_parsing2.csv.out  complex_header_parsing2.json  coord.csv  coord.json  counter5.DR_MY_CUSTOM.json  counter5.DR_MY_CUSTOM.xlsx  counter5.DR_MY_CUSTOM.xlsx.out  counter5.IR_M1.csv  counter5.IR_M1.csv.out  counter5.IR_M1.json  counter5.TR.json  counter5.TR.xlsx  counter5.TR.xlsx.out  counter51.PR_MY_CUSTOM.json  counter51.PR_MY_CUSTOM.tsv  counter51.PR_MY_CUSTOM.tsv.out  data_header-condition.csv  data_header-condition.json  date-in-single-field.csv  date-in-single-field.csv.out  (+149 more)
tests/data/dynamic/errors/: absolute_coords_in_exception.csv  absolute_coords_in_exception.json  absolute_coords_in_exception2.csv  absolute_coords_in_exception2.json  available-metrics-fail.csv  available-metrics-fail.json  available-metrics2-fail.csv  available-metrics2-fail.json  date_cells_out_of_range.csv  date_cells_out_of_range.json  dynamic_areas-min_valid.csv  dynamic_areas-min_valid.json  metric_number.csv  metric_number.json  missing-dates.csv  missing-dates.json  negative-values-in-output.csv  negative-values-in-output.json  not-aligned-date-EU.csv  not-aligned-date-EU.json  not-aligned-date-US.csv  not-aligned-date-US.json  same_records.csv  same_records.json  unknown_column_in_celus_format.csv  unknown_column_in_celus_format.json  uses_items_extra.csv  uses_items_extra.json  uses_items_missing.json  uses_titles_extra.csv  uses_titles_extra.json  uses_titles_missing.csv  uses_titles_missing.json  wrong_fixed_value.csv  wrong_fixed_value.json
tests/data/dynamic/non_counter/: celus_format-2d-3x2x3-%b-%y.csv  celus_format-2d-3x2x3-%y-%b.csv  celus_format-2d-3x2x3-endate.csv.out  celus_format-2d-3x2x3-endate.json  celus_format-2d-3x2x3-isodate.csv.out  (+21 more)
tests/data/non_counter/: my-date-metric-based.xlsx  my-date-metric-based.xlsx.out  my-metric-based.xlsx  my-metric-based.xlsx.out
tests/data/reader/: cp1250.csv  sample.tsv  test-simple.xls  test-simple.xlsx  utf8.csv
(+68 files in other folders)
