[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]

[tool.ruff]
line-length = 100
select = [
	# Pyflakes
	"F",
	# pycodestyle
	"E",
	# isort
	"I",
]
src = ["celus_nibbler", "tests"]

[tool.ruff.isort]
known-first-party = ["celus_nibbler"]


[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.poetry]
name = "celus-nibbler"
version = "10.1.4"
description = "Counter-like data reader and processor."
authors = ["Stepan Henek <stepan@bigdigdata.com>", "Zbynek Vyhlas <zbyneksmail@gmail.com>"]
license = "MIT"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries"
]
keywords = ["parsing", "counter5"]
documentation = "https://gitlab.com/big-dig-data/celus-nibbler/-/blob/master/README.md"

[tool.poetry.scripts]
nibbler-eat = 'celus_nibbler.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.9"

celus-nigiri = "~1.3.3"
diskcache = "~5.6.0"
nltk = "~3.8.1"
pydantic = "~2.4.2"
python-dateutil = "~2.8.2"
openpyxl = "~3.1.2"
unidecode = "~1.3.7"
isbnlib = "~3.10.14"
typing-extensions = "~4.8.0"
xlrd = { version="~2.0.1", optional = true }

[tool.poetry.dev-dependencies]
black = "23.7.0"
build = "~1.0.3"
mypy = "^1.6"
pre-commit = "~3.5.0"
pytest = "~7.4.3"
pytest-cov = "~4.1.0"
ruff = "~0.1.3"

[tool.poetry.extras]
xls = ["xlrd"]

[tool.poetry.plugins]

[tool.poetry.plugins."nibbler_parsers"]
"static.counter4.BR1.Tabular" = "celus_nibbler.parsers.counter.c4:BR1"
"static.counter4.BR2.Tabular" = "celus_nibbler.parsers.counter.c4:BR2"
"static.counter4.BR3.Tabular" = "celus_nibbler.parsers.counter.c4:BR3"
"static.counter4.DB1.Tabular" = "celus_nibbler.parsers.counter.c4:DB1"
"static.counter4.DB2.Tabular" = "celus_nibbler.parsers.counter.c4:DB2"
"static.counter4.PR1.Tabular" = "celus_nibbler.parsers.counter.c4:PR1"
"static.counter4.JR1.Tabular" = "celus_nibbler.parsers.counter.c4:JR1"
"static.counter4.JR1a.Tabular" = "celus_nibbler.parsers.counter.c4:JR1a"
"static.counter4.JR1GOA.Tabular" = "celus_nibbler.parsers.counter.c4:JR1GOA"
"static.counter4.JR2.Tabular" = "celus_nibbler.parsers.counter.c4:JR2"
"static.counter4.MR1.Tabular" = "celus_nibbler.parsers.counter.c4:MR1"

"static.counter5.DR.Tabular" = "celus_nibbler.parsers.counter.c5:DR"
"static.counter5.PR.Tabular" = "celus_nibbler.parsers.counter.c5:PR"
"static.counter5.TR.Tabular" = "celus_nibbler.parsers.counter.c5:TR"
"static.counter5.IR_M1.Tabular" = "celus_nibbler.parsers.counter.c5:IR_M1"
"static.counter5.DR.Json" = "celus_nibbler.parsers.counter.c5json:DR"
"static.counter5.PR.Json" = "celus_nibbler.parsers.counter.c5json:PR"
"static.counter5.TR.Json" = "celus_nibbler.parsers.counter.c5json:TR"
"static.counter5.IR_M1.Json" = "celus_nibbler.parsers.counter.c5json:IR_M1"

"static.non_counter.MY.MyMetricBased" = "celus_nibbler.parsers.non_counter.metric_based:MyMetricBasedParser"
"static.non_counter.MY.MyDateMetricBased" = "celus_nibbler.parsers.non_counter.date_metric_based:MyDateMetricBasedParser"
